# mon_lang

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  __debug_bin2184876825  build.zig  build.zig.zon  codegen.c  control_flow_test.go  debug_out.asm  decoder.c  decoder.h  defs.h  facto  fn_call.s  go.mod  guess  hi  integration_test.go  interp.c  main.c  main.go  main.s  main_test.go  mncompiler  mon_lang  nora_sandler_compiler.md  outfile  parser.c  parser.h  scanner.c  scanner.h  test.c  test.s  tree.c  tree.h
base/: debug.go
cli/: cli.go
code_gen/: asm_ast.go  convert.go  emitter.go  fixup.go  pseudo.go  x86x64.go
compare/: fact.js  fact.py
constant/: const.go
errors/: errors.go
examples/: 1.mn  hello_world.mn
gov/: .gitignore  README.md  __debug_bin763930978  go.mod  go.sum  main.go  main_test.go  out  out.asm  out.s  program  program.s
lexer/: keywords.go  lexer.go  token.go
linker/: linker.go
mconstant/: const.go
mn/: .vscodeignore  LICENSE  README.md  package-lock.json  vsc-extension-quickstart.md
mtypes/: types.go
parser/: ast.go  ast_decl.go  ast_expr.go  ast_stmt.go  errors.go  parse.go  parser_test.go
playground/: Dockerfile  docker-compose.yml  go.mod  main.go  run.sh  server.go
rustv/: Cargo.toml  build.rs  out.s
rustv/examples/: 1.mn  alpha.mn  return.mn
rustv/src/: gen.rs  main.rs  tacky.rs  tacky_gen.rs
rustv/src/backend/: gen.rs
rustv/src/front_end/: ast.rs  grammar.lalrpop  ir.rs  lexer.rs  mod.rs  scanner.rs
semantic_analysis/: label_loop.go  resolve.go  sematic_analyze.go  type_checker.go  types.go
(+187 files in other folders)
