[package]
name = "rustv"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
logos = "0.15.0"
anyhow = { version = "1.0.44"  }
thiserror = "2.0.11"
clap = { version = "4.5.31", features = ["derive"] }
